--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,6 +1,7 @@
 FROM php:5.6-apache
 RUN docker-php-ext-install mysqli
 RUN a2enmod rewrite
+RUN docker-php-ext-install pdo pdo_mysql
 RUN apt-get update && apt-get install -y \
 		libfreetype6-dev \
 		libjpeg62-turbo-dev \
