--- a/www/composer.json
+++ b/www/composer.json
@@ -1,5 +1,9 @@
 {
     "require": {
-        "slim/slim": "^3.8"
+        "slim/slim": "^3.8",
+        "doctrine/orm": "^2.5"
+    },
+    "autoload": {
+        "psr-4": {"App\\": "./src"}
     }
 }
