--- a/www/composer.json
+++ b/www/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "slim/slim": "^3.8",
         "doctrine/orm": "^2.5",
-        "oscarotero/psr7-middlewares": "^3.21"
+        "oscarotero/psr7-middlewares": "^3.21",
+        "monolog/monolog": "^1.23"
     },
     "autoload": {
         "psr-4": {"App\\": "./src"}
